fixed logo and coloring on nav bar

--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css/">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <nav class="nav bar">
-        <img src="images/images/filmclub.png" alt="">
+    <nav class="nav-bar">
+        <div id="logo">
+            <img src="images/images/filmclub.png" height=50% width=50%>
+        </div>
         <ul>
-            <li>
+            <li class="home">
                 <a href="index.html">Home</a>
             </li>
-            <li>
+            <li class="cal">
                 <a href="calendar/index.html">Calendar</a>
             </li>
             <li>
@@ -121,10 +123,10 @@
     <foot>
         <nav>
             <ul>
-                <li>
+                <li class="home">
                     <a href="index.html">Home</a>
                 </li>
-                <li>
+                <li class="cal">
                     <a href="calendar/index.html">Calendar</a>
                 </li>
                 <li>
