fixed margin, and colored background

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <li class="cal">
                 <a href="calendar/index.html">Calendar</a>
             </li>
-            <li>
+            <li class="join">
                 <a href="join/index.html">Join</a>
             </li>
         </ul>
     </nav>
     <div class="everything">
-        <header>
-            <h1>Get Involved</h1>
-        </header>
         <div class="majority">
+            <header>
+                <h1>Get Involved</h1>
+            </header>
             <div class="first">
                 <div class="topCap">
                     <h2>Watch</h2>
@@ -55,70 +55,69 @@
                 </p>
             </div>
         </div>
-        <div clss="second-majority">
-            <div class="topCap">
-                <h1>Up Next</h1>
-            </div>
-            <div class="feature">
-                <div class="rashomon">
-                    <img src="images/images/rashomon-poster.jpg" alt="">
+        <div class="second-majority">
+            <div class="btm">
+                <div class="topCap">
+                    <h2>Up Next</h2>
                 </div>
-                <div>
-                    <p>Rashomon</p>
-                    <br>
-                    <p>Film Club: 6/13</p>
-                    <br>
-                    <hr>
-                    <br>
-                    <p> Discussion Points</p>
-                    <ul>
-                        <li>perspective</li>
-                        <li>balance</li>
-                        <li>movement</li>
-                        <li>emphasis</li>
-                        <li>space</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="posters">
-                <div class="poster">
-                    <div>
-                        <img src="images/images/great-train-poster.jpg" alt="">
+                <div class="feature">
+                    <div class="rashomon">
+                        <img src="images/images/rashomon-poster.jpg" alt="">
                     </div>
                     <div>
-                        <p>The Great Train Robbery Film Club: 6/27
-                        </p>
+                        <p>Rashomon</p>
+                        <p>Film Club: 6/13</p>
+                        <hr>
+                        <p> Discussion Points</p>
+                        <ul>
+                            <li>perspective</li>
+                            <li>balance</li>
+                            <li>movement</li>
+                            <li>emphasis</li>
+                            <li>space</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="poster">
-                    <div>
-                        <img src="images/images/bicycle-thief-poster.jpg" alt="">
+                <div class="feature">
+                    <div class="poster">
+                        <div>
+                            <img src="images/images/great-train-poster.jpg" alt="">
+                        </div>
+                        <div>
+                            <p>The Great Train Robbery Film Club: 6/27
+                            </p>
+                        </div>
                     </div>
-                    <div>
-                        <p>The Bicycle Thief Film Club: 7/11
-                        </p>
+                    <div class="poster">
+                        <div>
+                            <img src="images/images/bicycle-thief-poster.jpg" alt="">
+                        </div>
+                        <div>
+                            <p>The Bicycle Thief Film Club: 7/11
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="poster">
-                    <div>
-                        <img src="images/images/nosferatu-poster.jpg" alt="">
+                    <div class="poster">
+                        <div>
+                            <img src="images/images/nosferatu-poster.jpg" alt="">
+                        </div>
+                        <div>
+                            <p>Nosferatu Film Club: 7/25
+                            </p>
+                        </div>
                     </div>
-                    <div>
-                        <p>Nosferatu Film Club: 7/25
-                        </p>
-                    </div>
-                </div>
-                <div class="poster">
-                    <div>
-                        <img src="images/images/metropolis-poster.jpg" alt="">
-                    </div>
-                    <div>
-                        <p>Metropolis Film Club: 8/08
-                        </p>
+                    <div class="poster">
+                        <div>
+                            <img src="images/images/metropolis-poster.jpg" alt="">
+                        </div>
+                        <div>
+                            <p>Metropolis Film Club: 8/08
+                            </p>
+                        </div>
+
                     </div>
 
                 </div>
-
             </div>
         </div>
     </div>
@@ -131,7 +130,7 @@
                 <li class="cal">
                     <a href="calendar/index.html">Calendar</a>
                 </li>
-                <li>
+                <li class="join">
                     <a href="join/index.html">Join</a>
                 </li>
                 <li> ©2017, Film Club</li>
