fixed compressed view first movie poster

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="rashomon">
                         <img src="images/images/rashomon-poster.jpg" alt="">
                     </div>
-                    <div>
+                    <div class="information">
                         <p>Rashomon</p>
                         <p>Film Club: 6/13</p>
                         <hr>
