--- a/index.html
+++ b/index.html
@@ -78,13 +78,15 @@
                         </ul>
                     </div>
                 </div>
-                <div class="feature">
+                <div class="featureTwo">
                     <div class="poster">
                         <div>
                             <img src="images/images/great-train-poster.jpg" alt="">
                         </div>
                         <div>
-                            <p>The Great Train Robbery Film Club: 6/27
+                            <p>The Great Train Robbery
+                            </p>
+                            <p> Film Club 6/27
                             </p>
                         </div>
                     </div>
@@ -93,7 +95,9 @@
                             <img src="images/images/bicycle-thief-poster.jpg" alt="">
                         </div>
                         <div>
-                            <p>The Bicycle Thief Film Club: 7/11
+                            <p>The Bicycle Thief
+                            </p>
+                            <p> Film Club: 7/11
                             </p>
                         </div>
                     </div>
