--- a/index.html
+++ b/index.html
@@ -26,105 +26,105 @@
             </li>
         </ul>
     </nav>
-    <div class="everything">
-        <div class="majority">
-            <header>
-                <h1>Get Involved</h1>
-            </header>
-            <div class="first">
-                <div class="topCap">
-                    <h2>Watch</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
-                </p>
+    <!--<div class="everything">-->
+    <div class="majority">
+        <header>
+            <h1>Get Involved</h1>
+        </header>
+        <div class="first">
+            <div class="topCap">
+                <h2>Watch</h2>
             </div>
-            <div class="second">
-                <div class="topCap">
-                    <h2>Take Notes</h2>
-                </div>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-            </div>
-            <div class="third">
-                <div class="topCap">
-                    <h2>Meetup</h2>
-                </div>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua.
+            </p>
         </div>
-        <div class="second-majority">
-            <div class="btm">
-                <div class="topCap">
-                    <h2>Up Next</h2>
+        <div class="second">
+            <div class="topCap">
+                <h2>Take Notes</h2>
+            </div>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+        </div>
+        <div class="third">
+            <div class="topCap">
+                <h2>Meetup</h2>
+            </div>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+    </div>
+    <div class="second-majority">
+        <div class="btm">
+            <div class="topCap">
+                <h2>Up Next</h2>
+            </div>
+            <div class="feature">
+                <div class="rashomon">
+                    <img src="images/images/rashomon-poster.jpg" alt="">
                 </div>
-                <div class="feature">
-                    <div class="rashomon">
-                        <img src="images/images/rashomon-poster.jpg" alt="">
+                <div class="information">
+                    <p>Rashomon</p>
+                    <p>Film Club: 6/13</p>
+                    <hr>
+                    <p> Discussion Points</p>
+                    <ul>
+                        <li>perspective</li>
+                        <li>balance</li>
+                        <li>movement</li>
+                        <li>emphasis</li>
+                        <li>space</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="featureTwo">
+                <div class="poster">
+                    <div>
+                        <img src="images/images/great-train-poster.jpg" alt="">
                     </div>
-                    <div class="information">
-                        <p>Rashomon</p>
-                        <p>Film Club: 6/13</p>
-                        <hr>
-                        <p> Discussion Points</p>
-                        <ul>
-                            <li>perspective</li>
-                            <li>balance</li>
-                            <li>movement</li>
-                            <li>emphasis</li>
-                            <li>space</li>
-                        </ul>
+                    <div>
+                        <p>The Great Train Robbery
+                        </p>
+                        <p> Film Club 6/27
+                        </p>
                     </div>
                 </div>
-                <div class="featureTwo">
-                    <div class="poster">
-                        <div>
-                            <img src="images/images/great-train-poster.jpg" alt="">
-                        </div>
-                        <div>
-                            <p>The Great Train Robbery
-                            </p>
-                            <p> Film Club 6/27
-                            </p>
-                        </div>
+                <div class="poster">
+                    <div>
+                        <img src="images/images/bicycle-thief-poster.jpg" alt="">
                     </div>
-                    <div class="poster">
-                        <div>
-                            <img src="images/images/bicycle-thief-poster.jpg" alt="">
-                        </div>
-                        <div>
-                            <p>The Bicycle Thief
-                            </p>
-                            <p> Film Club: 7/11
-                            </p>
-                        </div>
+                    <div>
+                        <p>The Bicycle Thief
+                        </p>
+                        <p> Film Club: 7/11
+                        </p>
                     </div>
-                    <div class="poster">
-                        <div>
-                            <img src="images/images/nosferatu-poster.jpg" alt="">
-                        </div>
-                        <div>
-                            <p>Nosferatu Film Club: 7/25
-                            </p>
-                        </div>
+                </div>
+                <div class="poster">
+                    <div>
+                        <img src="images/images/nosferatu-poster.jpg" alt="">
                     </div>
-                    <div class="poster">
-                        <div>
-                            <img src="images/images/metropolis-poster.jpg" alt="">
-                        </div>
-                        <div>
-                            <p>Metropolis Film Club: 8/08
-                            </p>
-                        </div>
+                    <div>
+                        <p>Nosferatu Film Club: 7/25
+                        </p>
+                    </div>
+                </div>
+                <div class="poster">
+                    <div>
+                        <img src="images/images/metropolis-poster.jpg" alt="">
+                    </div>
+                    <div>
+                        <p>Metropolis Film Club: 8/08
+                        </p>
+                    </div>
 
-                    </div>
-
                 </div>
+
             </div>
         </div>
     </div>
+    <!--</div>-->
     <footer>
         <nav>
             <ul>
