--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
     <div class="second-majority">
         <div class="btm">
             <div class="topCap">
-                <h2>Up Next</h2>
+                <h2 id="up">Up Next</h2>
             </div>
             <div class="feature">
                 <div class="rashomon">
                     <img src="images/images/rashomon-poster.jpg" alt="">
                 </div>
                 <div class="information">
-                    <p>Rashomon</p>
+                    <a href=" https://www.youtube.com/watch?v=7QTrx3YNz7A&t=8s">Rashomon</a>
                     <p>Film Club: 6/13</p>
                     <hr>
                     <p> Discussion Points</p>
@@ -84,8 +84,7 @@
                         <img src="images/images/great-train-poster.jpg" alt="">
                     </div>
                     <div>
-                        <p>The Great Train Robbery
-                        </p>
+                        <a href="https://www.youtube.com/watch?v=zuto7qWrplc">The Great Train Robby</a>
                         <p> Film Club 6/27
                         </p>
                     </div>
@@ -95,8 +94,7 @@
                         <img src="images/images/bicycle-thief-poster.jpg" alt="">
                     </div>
                     <div>
-                        <p>The Bicycle Thief
-                        </p>
+                        <a href="https://www.youtube.com/watch?v=H3jnzXX9mXs">The Bicyle Theif</a>
                         <p> Film Club: 7/11
                         </p>
                     </div>
@@ -106,8 +104,8 @@
                         <img src="images/images/nosferatu-poster.jpg" alt="">
                     </div>
                     <div>
-                        <p>Nosferatu Film Club: 7/25
-                        </p>
+                        <a href=" https://www.youtube.com/watch?v=FC6jFoYm3xs">Nosferatu</a>
+                        <p> Film Club: 7/25</p>
                     </div>
                 </div>
                 <div class="poster">
@@ -115,8 +113,8 @@
                         <img src="images/images/metropolis-poster.jpg" alt="">
                     </div>
                     <div>
-                        <p>Metropolis Film Club: 8/08
-                        </p>
+                        <a href="https://www.youtube.com/watch?v=Q0NzALRJifI">Metropolis</a>
+                        <p>Film Club: 8/08</p>
                     </div>
 
                 </div>
