mostly finished mobile home page needs text addition

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                         <img src="images/images/great-train-poster.jpg" alt="">
                     </div>
                     <div>
-                        <a href="https://www.youtube.com/watch?v=zuto7qWrplc">The Great Train Robby</a>
-                        <p> Film Club 6/27
+                        <a href="https://www.youtube.com/watch?v=zuto7qWrplc">The Great Train Robbery</a>
+                        <p> Film Club: 6/27
                         </p>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <img src="images/images/bicycle-thief-poster.jpg" alt="">
                     </div>
                     <div>
-                        <a href="https://www.youtube.com/watch?v=H3jnzXX9mXs">The Bicyle Theif</a>
+                        <a href="https://www.youtube.com/watch?v=H3jnzXX9mXs">The Bicycle Thief</a>
                         <p> Film Club: 7/11
                         </p>
                     </div>
@@ -135,7 +135,7 @@
                 <li class="join">
                     <a href="join/index.html">Join</a>
                 </li>
-                <li> ©2017, Film Club</li>
+                <li id="bot"> ©2017, Film Club</li>
             </ul>
         </nav>
     </footer>
