started tablet sized home page and flexed a majority of the page to fit the concept

--- a/index.html
+++ b/index.html
@@ -31,28 +31,30 @@
         <header>
             <h1>Get Involved</h1>
         </header>
-        <div class="first">
-            <div class="topCap">
-                <h2>Watch</h2>
+        <div class="topRow">
+            <div class="first">
+                <div class="topCap">
+                    <h2>Watch</h2>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua.
+                </p>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-            </p>
-        </div>
-        <div class="second">
-            <div class="topCap">
-                <h2>Take Notes</h2>
+            <div class="second">
+                <div class="topCap">
+                    <h2>Take Notes</h2>
+                </div>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
             </div>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-        </div>
-        <div class="third">
-            <div class="topCap">
-                <h2>Meetup</h2>
+            <div class="third">
+                <div class="topCap">
+                    <h2>Meetup</h2>
+                </div>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
             </div>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
         </div>
     </div>
     <div class="second-majority">
