fixed calendar to start at a small size needs coloring and adjustments

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -10,6 +10,143 @@
 </head>
 
 <body>
+    <nav class="nav-bar">
+        <div id="logo">
+            <img src="../images/images/filmclub.png" height=50% width=50%>
+        </div>
+        <ul>
+            <li class="home">
+                <a href="../index.html">Home</a>
+            </li>
+            <li class="cal">
+                <a href="index.html">Calendar</a>
+            </li>
+            <li class="join">
+                <a href="join/index.html">Join</a>
+            </li>
+        </ul>
+    </nav>
+    <div>
+        <h1>Meet up Calendar</h1>
+    </div>
+    <div class="topCap">
+        <p>June</p>
+        <div class="calenders">
+            <div class="calender">
+                <ul>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        <div>1</div>
+                    </li>
+                    <li>
+                        < <div>1</div>
+            </li>
+            <li>
+                <div>1</div>
+            </li>
+            <li>
+                <div>1</div>
+            </li>
+            </ul>
+        </div>
+    </div>
+    </div>
+    <footer>
+        <nav>
+            <ul>
+                <li class="home">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="cal">
+                    <a href="calendar/index.html">Calendar</a>
+                </li>
+                <li class="join">
+                    <a href="join/index.html">Join</a>
+                </li>
+                <li id="bot"> ©2017, Film Club</li>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 
