--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="btm">
             <div class="feature">
                 <div class="rashomon">
-                    <img src="images/images/rashomon-poster.jpg" alt="">
+                    <img src="images/images/rashomon-poster.jpg" alt="Rashomon Poster">
                 </div>
                 <div class="information">
                     <a href=" https://www.youtube.com/watch?v=7QTrx3YNz7A&t=8s">Rashomon</a>
@@ -83,7 +83,7 @@
             <div class="featureTwo">
                 <div class="poster">
                     <div>
-                        <img src="images/images/great-train-poster.jpg" alt="">
+                        <img src="images/images/great-train-poster.jpg" alt="The Great Train Robbery Poster">
                     </div>
                     <div>
                         <a href="https://www.youtube.com/watch?v=zuto7qWrplc">The Great Train Robbery</a>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="poster">
                     <div>
-                        <img src="images/images/bicycle-thief-poster.jpg" alt="">
+                        <img src="images/images/bicycle-thief-poster.jpg" alt="The Bicycle Thief Poster">
                     </div>
                     <div>
                         <a href="https://www.youtube.com/watch?v=H3jnzXX9mXs">The Bicycle Thief</a>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="poster">
                     <div>
-                        <img src="images/images/nosferatu-poster.jpg" alt="">
+                        <img src="images/images/nosferatu-poster.jpg" alt="Nosferatu Poster">
                     </div>
                     <div>
                         <a href=" https://www.youtube.com/watch?v=FC6jFoYm3xs">Nosferatu</a>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="poster">
                     <div>
-                        <img src="images/images/metropolis-poster.jpg" alt="">
+                        <img src="images/images/metropolis-poster.jpg" alt="Metropolis Poster">
                     </div>
                     <div>
                         <a href="https://www.youtube.com/watch?v=Q0NzALRJifI">Metropolis</a>
