--- a/calendar/index.html
+++ b/calendar/index.html
@@ -30,7 +30,9 @@
         <h1>Meet up Calendar</h1>
     </div>
     <div class="topCap">
-        <p>June</p>
+        <p id="up">
+            <h3>June</h3>
+        </p>
         <div class="calenders">
             <div class="calender">
                 <ul>
@@ -38,98 +40,98 @@
                         <div>1</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>2</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>3</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>4</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>5</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>6</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>7</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>8</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>9</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>10</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>11</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>12</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>13</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>14</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>15</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>16</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>17</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>18</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>19</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>20</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>21</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>22</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>23</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>24</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>25</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>26</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>27</div>
                     </li>
                     <li>
-                        <div>1</div>
+                        <div>28</div>
                     </li>
                     <li>
-                        < <div>1</div>
-            </li>
-            <li>
-                <div>1</div>
-            </li>
-            <li>
-                <div>1</div>
-            </li>
-            </ul>
+                        <div>29</div>
+                    </li>
+                    <li>
+                        <div>30</div>
+                    </li>
+                    <li>
+                        <div>31</div>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
     </div>
     <footer>
         <nav>
