fixed margin errors and finished desktop

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -27,7 +27,7 @@
         </ul>
     </nav>
     <div>
-        <h1>Meet up Calendar</h1>
+        <h1 id="meet">Meetup Calendar</h1>
     </div>
     <div class="topCap">
         <p id="up">
