added profile picture and put a border around it

--- a/join/index.html
+++ b/join/index.html
@@ -10,6 +10,49 @@
 </head>
 
 <body>
+    <nav class="nav-bar">
+        <div id="logo">
+            <img src="../images/images/filmclub.png" height=50% width=50%>
+        </div>
+        <ul>
+            <li class="home">
+                <a href="../index.html">Home</a>
+            </li>
+            <li class="cal">
+                <a href="../calendar/index.html">Calendar</a>
+            </li>
+            <li class="join">
+                <a href="index.html">Join</a>
+            </li>
+        </ul>
+    </nav>
+    <div>
+        <h1 id="meet">Join Film Club</h1>
+    </div>
+    <div class="majority">
+        <div class="profilePic">
+            <label for="profile">Profile Picture</label>
+            <p></p>
+            <input type="file" id="profile">
+            <img src="../images/images/profile-placeholder.png" alt="">
+        </div>
+    </div>
+    <footer>
+        <nav>
+            <ul>
+                <li class="home">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="cal">
+                    <a href="calendar/index.html">Calendar</a>
+                </li>
+                <li class="join">
+                    <a href="join/index.html">Join</a>
+                </li>
+                <li id="bot"> ©2017, Film Club</li>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 
