all input boxes added

--- a/join/index.html
+++ b/join/index.html
@@ -36,6 +36,16 @@
             <input type="file" id="profile">
             <img src="../images/images/profile-placeholder.png" alt="">
         </div>
+        <div class="inputs">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email Address:</label>
+            <input type="email" id="email" name="email">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password">
+            <label for="confirm-password">Confirm Password</label>
+            <input type="confirm-password" id="confirm-password" name="confirm-password">
+        </div>
     </div>
     <footer>
         <nav>
