most catergories are put in

--- a/join/index.html
+++ b/join/index.html
@@ -39,12 +39,51 @@
         <div class="inputs">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
+            <br>
             <label for="email">Email Address:</label>
             <input type="email" id="email" name="email">
+            <br>
             <label for="password">Password</label>
             <input type="password" id="password" name="password">
+            <br>
             <label for="confirm-password">Confirm Password</label>
             <input type="confirm-password" id="confirm-password" name="confirm-password">
+        </div>
+        <div class="checks">
+            <legend>Which Generes are you intrested in?</legend>
+            <br>
+            <input type="checkbox" name="additions" id="action" value="action">
+            <label for="action">action</label>
+            <br>
+            <input type="checkbox" name="additions" id="adventure" value="adventure">
+            <label for="adventure">adventure</label>
+            <br>
+            <input type="checkbox" name="additions" id="comedy" value="comedy">
+            <label for="comedy">comedy</label>
+            <br>
+            <input type="checkbox" name="additions" id="drama" value="drama">
+            <label for="drama">drama</label>
+            <br>
+            <input type="checkbox" name="additions" id="fantasy" value="fantasy">
+            <label for="fantasy">fantasy</label>
+            <br>
+            <input type="checkbox" name="additions" id="historical" value="historical">
+            <label for="historical">historical</label>
+            <br>
+            <input type="checkbox" name="additions" id="horror" value="horror">
+            <label for="horror">horror</label>
+            <br>
+            <input type="checkbox" name="additions" id="mystery" value="mystery">
+            <label for="mystery">mystery</label>
+            <br>
+            <input type="checkbox" name="additions" id="romance" value="romance">
+            <label for="romance">romance</label>
+            <br>
+            <input type="checkbox" name="additions" id="scifi" value="scifi">
+            <label for="scifi">science fiction</label>
+            <br>
+            <input type="checkbox" name="additions" id="western" value="western">
+            <label for="western">western</label>
         </div>
     </div>
     <footer>
