most inputs put in and margins are set

--- a/join/index.html
+++ b/join/index.html
@@ -37,16 +37,20 @@
             <img src="../images/images/profile-placeholder.png" alt="">
         </div>
         <div class="inputs">
-            <label for="name">Name:</label>
+            <label for="name">Name</label>
+            <br>
             <input type="text" id="name" name="name" required>
             <br>
-            <label for="email">Email Address:</label>
+            <label for="email">Email Address</label>
+            <br>
             <input type="email" id="email" name="email">
             <br>
             <label for="password">Password</label>
+            <br>
             <input type="password" id="password" name="password">
             <br>
             <label for="confirm-password">Confirm Password</label>
+            <br>
             <input type="confirm-password" id="confirm-password" name="confirm-password">
         </div>
         <div class="checks">
@@ -84,6 +88,12 @@
             <br>
             <input type="checkbox" name="additions" id="western" value="western">
             <label for="western">western</label>
+        </div>
+        <div class="text">
+            <label> Additonal input</label>
+            <br>
+            <textarea id="myText">
+            </textarea>
         </div>
     </div>
     <footer>
