most of styling for moble sign up finished

--- a/join/index.html
+++ b/join/index.html
@@ -95,20 +95,24 @@
             <textarea id="myText">
             </textarea>
         </div>
+        <div class="text">
+            <input type="submit" value="Join Film Club" id="submit">
+
+        </div>
     </div>
     <footer>
         <nav>
             <ul>
-                <li class="home">
-                    <a href="index.html">Home</a>
+                <li class=" home ">
+                    <a href="index.html ">Home</a>
                 </li>
-                <li class="cal">
-                    <a href="calendar/index.html">Calendar</a>
+                <li class="cal ">
+                    <a href="calendar/index.html ">Calendar</a>
                 </li>
-                <li class="join">
-                    <a href="join/index.html">Join</a>
+                <li class="join ">
+                    <a href="join/index.html ">Join</a>
                 </li>
-                <li id="bot"> ©2017, Film Club</li>
+                <li id="bot "> ©2017, Film Club</li>
             </ul>
         </nav>
     </footer>
