fixed imaged size and flex top row

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -22,7 +22,7 @@
                 <a href="index.html">Calendar</a>
             </li>
             <li class="join">
-                <a href="join/index.html">Join</a>
+                <a href="../join/index.html">Join</a>
             </li>
         </ul>
     </nav>
