--- a/join/index.html
+++ b/join/index.html
@@ -30,28 +30,30 @@
         <h1 id="meet">Join Film Club</h1>
     </div>
     <div class="majority">
-        <div class="profilePic">
-            <label for="profile">Profile Picture</label>
-            <p></p>
-            <input type="file" id="profile">
-            <img src="../images/images/profile-placeholder.png" alt="">
-        </div>
-        <div class="inputs">
-            <label for="name">Name</label>
-            <br>
-            <input type="text" id="name" name="name" required>
-            <br>
-            <label for="email">Email Address</label>
-            <br>
-            <input type="email" id="email" name="email">
-            <br>
-            <label for="password">Password</label>
-            <br>
-            <input type="password" id="password" name="password">
-            <br>
-            <label for="confirm-password">Confirm Password</label>
-            <br>
-            <input type="confirm-password" id="confirm-password" name="confirm-password">
+        <div class="topped">
+            <div class="profilePic">
+                <label for="profile">Profile Picture</label>
+                <p></p>
+                <input type="file" id="profile">
+                <img src="../images/images/profile-placeholder.png" alt="">
+            </div>
+            <div class="inputs">
+                <label for="name">Name</label>
+                <br>
+                <input type="text" id="name" name="name" required>
+                <br>
+                <label for="email">Email Address</label>
+                <br>
+                <input type="email" id="email" name="email">
+                <br>
+                <label for="password">Password</label>
+                <br>
+                <input type="password" id="password" name="password">
+                <br>
+                <label for="confirm-password">Confirm Password</label>
+                <br>
+                <input type="confirm-password" id="confirm-password" name="confirm-password">
+            </div>
         </div>
         <div class="checks">
             <legend>Which Generes are you intrested in?</legend>
